# spim-core

./: README.md  pyproject.toml
spim_core/: config_base.py  file_transfer.py  spim_base.py  tiff_transfer.py
spim_core/devices/: tiger_components.py
spim_core/operations/: aind_schema_filter.py  dict_formatter.py
spim_core/processes/: data_transfer.py
tests/: config_loading.py  file_transferring.py  sample_pose_mapping.py
tests/test_configs/: config.toml  config.yaml
